# ai_resume

./: PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  hello.py  pyproject.toml  requirements.txt  sample-resume.txt  setup.py
src/: main.py
src/routes/: analysis.py
src/static/: index.html  script.js  styles.css
