[project]
name = "resume-analyzer-package"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "blinker==1.9.0",
    "certifi==2025.6.15",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "flask-cors==6.0.0",
    "flask==3.1.1",
    "flask-sqlalchemy==3.1.1",
    "greenlet==3.2.3",
    "idna==3.10",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "lxml==6.0.0",
    "markupsafe==3.0.2",
    "pypdf2==3.0.1",
    "python-docx==1.2.0",
    "python-dotenv==1.1.1",
    "requests==2.32.4",
    "sqlalchemy==2.0.41",
    "typing-extensions==4.14.0",
    "urllib3==2.5.0",
    "werkzeug==3.1.3",
]
